# impforge-workstation

./: .mcp.json  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-ENGINE  README.md  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test-build.yml
crates/impforge-engine/: Cargo.toml  README.md
crates/impforge-engine/src/: brain.rs  browser.rs  cascade.rs  evaluation.rs  health.rs  lib.rs  license.rs  license_keygen.rs  license_store.rs  monitoring.rs  trust.rs
docs/: ImpForgeTeamProductDocument.md  enterprise-llm-optimization.md  inference-frameworks-comparison.md
docs/dev/: DEVELOPER.md  architecture.md  model-routing.md
docs/legal/: 2026-03-08-nexus-legal-foundations.md  2026-03-15-impforge-integration-legal-framework.md
docs/plans/: 2026-03-07-nexus-phase2-implementation.md  2026-03-08-impforge-licensing-architecture-design.md  2026-03-08-nexus-browser-phase2-phase3-plan.md  2026-03-08-nexus-cdp-browser-engine-design.md  2026-03-09-benikui-enterprise-chat-upgrade-design.md  2026-03-09-chat-terminal-browser-ui-design.md  2026-03-09-chat-terminal-ui-enterprise-design.md  2026-03-09-chat-terminal-ui-implementation.md  2026-03-09-codeforge-ide-design.md  2026-03-09-codeforge-ide-implementation.md  2026-03-09-forge-memory-design.md  2026-03-09-forge-memory-implementation.md  2026-03-09-forgememory-v2-design.md  2026-03-09-forgememory-v2-implementation.md  2026-03-09-forgememory-v3-retrieval-upgrade-design.md  2026-03-09-forgememory-v3-retrieval-upgrade.md  2026-03-09-ide-jetbrains-killer-design.md  2026-03-09-ide-jetbrains-killer-implementation.md  2026-03-09-neuralswarm-worker-migration-design.md  2026-03-09-neuralswarm-worker-migration-implementation.md  2026-03-09-production-readiness.md  2026-03-15-adaptive-onboarding.md  2026-03-15-impforge-adaptive-platform-design.md
docs/research/: 2026-03-07-ai-stack-research.md  2026-03-07-mcp-server-research.md  2026-03-07-phase2-research.md  2026-03-08-nexus-orchestrator-scientific-foundations.md  2026-03-08-video-analysis-rust-svelte-enterprise.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: achievements.rs  activity_log.rs  advanced_ai.rs  app_launcher.rs  auto_import.rs  auto_publisher.rs  auto_update.rs  browser.rs  browser_agent.rs  browser_import.rs  cdp_devtools.rs  cdp_engine.rs  cdp_network.rs  chat.rs  command_palette.rs  error.rs  file_processor.rs  forge_browser.rs  forge_calendar.rs  forge_canvas.rs  forge_flow.rs  forge_mail.rs  forge_notes.rs  forge_pdf.rs  forge_quest.rs  forge_sheets.rs  forge_slides.rs  forge_team.rs  forge_writer.rs  freelancer.rs  global_search.rs  health_dashboard.rs  inner_thoughts.rs  lib.rs  main.rs  model_router.rs  neuralswarm.rs  news_feed.rs  notifications.rs  ollama.rs  (+15 more)
src-tauri/src/agents/: mod.rs
src-tauri/src/ai/: mod.rs  providers.rs
src-tauri/src/docker/: mod.rs
src-tauri/src/evaluation/: mod.rs
src-tauri/src/forge_memory/: bm25.rs  chunk_context.rs  commands.rs  context.rs  digest.rs  embeddings.rs  engine.rs  graph.rs  ingest.rs  llm_extract.rs  memory.rs  migration.rs  mod.rs  nlp.rs  search.rs  store.rs  tree_sitter_langs.rs  vector.rs  watch.rs
src-tauri/src/forge_memory/sql/: v001_initial.sql  v002_enterprise_expansion.sql  v003_domain_knowledge.sql
src-tauri/src/github/: mod.rs
src-tauri/src/ide/: ai_complete.rs  billing.rs  collab.rs  db_client.rs  debug.rs  forge_ai.rs  git.rs  http_client.rs  indexer.rs  keymap.rs  lsp.rs  mod.rs  pty.rs  shadow.rs
src-tauri/src/inference/: candle_engine.rs  fsrs_scheduler.rs  gguf.rs  hub.rs  mod.rs  rig_router.rs
src-tauri/src/monitoring/: mod.rs  quick.rs  recommendations.rs
src-tauri/src/orchestrator/: agent_scaling.rs  brain.rs  ci_cd.rs  evaluation.rs  events.rs  git_ops.rs  health.rs  message_bus.rs  moa_pipeline.rs  mod.rs  resource_governor.rs  scheduler_cron.rs  social_media.rs  store.rs  topology.rs  trust.rs  worker_pool.rs
src-tauri/src/orchestrator/workers/: mod.rs
src-tauri/src/router/: classifier.rs  mod.rs  targets.rs
src-tauri/src/traits/: community.rs  mod.rs
src/lib/: commands.ts
src/lib/agents/: index.ts
src/lib/components/: AboutDialog.svelte  AchievementToast.svelte  EmojiReactionBar.svelte  ErrorToast.svelte  GuidedTour.svelte  InnerThoughtsSuggestion.svelte  ModuleDiscovery.svelte  OnboardingProgress.svelte  OnboardingWizard.svelte  ProGate.svelte  index.ts
src/lib/stores/: achievements.svelte.ts  app-launcher.svelte.ts  browser-agent.svelte.ts  browser-import.svelte.ts  browser-playground.svelte.ts  cdp.svelte.ts  chat.svelte.ts  digest.svelte.ts  edit-predictor.svelte.ts  errors.svelte.ts  forgewatch.svelte.ts  guided-tour.svelte.ts  ide.svelte.ts  layout-manager.svelte.ts  license.svelte.ts  model-status.svelte.ts  models.svelte.ts  module-registry.svelte.ts  onboarding.svelte.ts  orchestrator.svelte.ts  scraper.svelte.ts  settings.svelte.ts  style-engine.svelte.ts  sunshine.svelte.ts  system.svelte.ts  terminal.svelte.ts  theme.svelte.ts
src/lib/utils/: lazy-fonts.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
src/routes/achievements/: +page.svelte
src/routes/agents/: +page.svelte
src/routes/ai/: +page.svelte
src/routes/ai-lab/: +page.svelte
src/routes/apps/: +page.svelte
src/routes/browser/: +page.svelte
src/routes/calendar/: +page.svelte
src/routes/canvas/: +page.svelte
src/routes/chat/: +page.svelte
src/routes/connector/: +page.svelte
src/routes/convergence/: +page.svelte
src/routes/docker/: +page.svelte
src/routes/evaluation/: +page.svelte
src/routes/files/: +page.svelte
src/routes/freelancer/: +page.svelte
src/routes/github/: +page.svelte
src/routes/healing/: +page.svelte
src/routes/health/: +page.svelte
src/routes/ide/: +page.svelte  AiAgent.svelte  CodeEditor.svelte  CodeGraphPanel.svelte  CollabPanel.svelte  CommandPalette.svelte  (+14 more)
(+58 files in other folders)
