[package]
name = "impforge"
version = "0.6.0"
description = "ImpForge — AI Workstation Builder. One app. Your complete AI stack."
authors = ["AiImp Development"]
license = "Apache-2.0"
repository = "https://github.com/AiImpDevelopment/impforge"
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "impforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# ============================================================================
# CORE
# ============================================================================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# MessagePack binary serialization — 30-50% smaller than JSON for large payloads
# (Benchmark: 1.5ms serialize vs 3.1ms deserialize, ~785KB for test dataset)
rmp-serde = "1.3"
log = "0.4"
thiserror = "2"
anyhow = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# Utilities
once_cell = "1.19"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Async traits (for TaskWorker trait)
async-trait = "0.1"

# SQLite (bundled — no system dependency, standalone for customers)
rusqlite = { version = "0.36", features = ["bundled"] }

# ============================================================================
# TAURI
# ============================================================================
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-os = "2"

# ============================================================================
# HTTP & NETWORKING
# ============================================================================
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }

# ============================================================================
# DOCKER
# ============================================================================
bollard = "0.18"

# ============================================================================
# AI/ML - UNIFIED PROVIDERS
# ============================================================================

# Unified LLM Backend (graniet/llm) - 15+ providers
# Supports: OpenAI, Anthropic, Ollama, OpenRouter, Groq, Google, Mistral, etc.
# https://github.com/graniet/llm
llm = "1.3"

# Multi-AI Providers (genai) - Alternative unified interface
# Supports: OpenAI, Anthropic, Gemini, xAI, Ollama, Groq, DeepSeek, Cohere
# https://github.com/jeremychone/rust-genai
genai = "0.6.0-beta.3"

# ============================================================================
# AI/ML - SPECIFIC PROVIDERS
# ============================================================================

# OpenAI API (async, streaming, function calling)
# https://github.com/64bit/async-openai
async-openai = "0.33"

# Anthropic Claude API (streaming, tools, vision)
# https://crates.io/crates/anthropic-sdk-rust
anthropic-sdk-rust = "0.1"

# Mistral AI API
# https://crates.io/crates/mistralai-client
mistralai-client = "0.14"

# ============================================================================
# AI/ML - LOCAL INFERENCE
# ============================================================================

# HuggingFace Hub - Model downloads (official HF crate)
# https://github.com/huggingface/hf-hub
hf-hub = { version = "0.5", features = ["tokio"] }

# Candle - HuggingFace Rust ML Framework
# Supports: Llama, Mistral, Mixtral, Phi, quantized models
# https://github.com/huggingface/candle
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"

# llama.cpp Rust bindings (for GGUF/GGML models)
# https://github.com/edgenai/llama_cpp-rs
llama-cpp-2 = "0.1"

# HuggingFace Tokenizers (fast tokenization)
# https://github.com/huggingface/tokenizers
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }

# ============================================================================
# AI/ML - EMBEDDINGS & VECTORS
# ============================================================================

# FastEmbed - Local embeddings (ONNX-based, no Python needed)
# Supports: BGE, MiniLM, all-mpnet, paraphrase models
# https://github.com/Anush008/fastembed-rs
fastembed = "5.12"

# Text Splitter - Semantic chunking for RAG
# https://github.com/benbrandt/text-splitter
text-splitter = { version = "0.29", features = ["tiktoken-rs", "tokenizers", "code"] }

# ============================================================================
# AI/ML - VECTOR DATABASES
# ============================================================================

# Qdrant - High-performance vector search (Rust-native)
# https://github.com/qdrant/rust-client
qdrant-client = "1.17"

# LanceDB - Serverless vector database
# https://github.com/lancedb/lancedb
lancedb = "0.26"

# ============================================================================
# WEB SCRAPING (built-in, MIT-licensed — replaces Firecrawl for customers)
# ============================================================================

# HTML parsing with CSS selectors (ISC license)
scraper = "0.25"

# HTML-to-Markdown conversion (MIT license, spider-rs)
fast_html2md = "0.0.58"

# ============================================================================
# BROWSER AUTOMATION (CDP — Chrome DevTools Protocol, MIT/Apache-2.0)
# ============================================================================

# Rust-native Chrome/Chromium control via DevTools Protocol
# Navigate, screenshot, extract, fill forms, execute JS — no Node.js needed
chromiumoxide = "0.9"

# Base64 encoding (for screenshots, browser data export)
base64 = "0.22"

# Compression (zstd for profile export — 60% better than raw base64)
zstd = "0.13"

# HMAC-SHA256 integrity (for profile string signing)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# ForgeMemory — Custom AI Memory Engine
# BM25 stemming (Snowball algorithm — Robertson & Zaragoza 2009)
rust-stemmers = "1.2"
# Unicode-aware tokenization for BM25 inverted index
unicode-segmentation = "1.12"

# ForgeMemory — AST-aware chunking (cAST, arXiv:2506.15655)
# Tree-sitter grammars for semantic code splitting.
# All grammar crates use the tree-sitter-language bridge (LanguageFn API)
# and are compatible with tree-sitter 0.26.
#
# IMPORTANT: Do NOT add grammar crates that depend on tree-sitter <0.24.
# They compile an older tree-sitter C library whose symbols conflict with
# 0.26's at link time (duplicate symbol errors from lld).
tree-sitter = "0.26"
tree-sitter-language = "0.1"
# --- 25 grammars using modern tree-sitter-language bridge ---
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-scala = "0.24"
tree-sitter-lua = "0.5"
tree-sitter-r = "1.2"
tree-sitter-julia = "0.23"
tree-sitter-elixir = "0.3"
tree-sitter-bash = "0.25"
tree-sitter-html = "0.23"
tree-sitter-css = "0.25"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-xml = "0.7"
tree-sitter-graphql = "0.1"
tree-sitter-zig = "1.1"
# --- Upgraded "-ng" grammars (replace old crates that used tree-sitter <0.24) ---
tree-sitter-kotlin-ng = "1.1"         # replaces tree-sitter-kotlin 0.3
tree-sitter-svelte-ng = "1.0"         # replaces tree-sitter-svelte 0.10
tree-sitter-toml-ng = "0.7"           # replaces tree-sitter-toml 0.20
tree-sitter-md = "0.5"                # replaces tree-sitter-markdown 0.7
# --- Alternative grammar crates (modern replacements from grammar-orchard/forks) ---
tree-sitter-dart-orchard = "0.3"      # replaces tree-sitter-dart 0.0.4 (grammar-orchard)
tree-sitter-sequel = "0.3"            # replaces tree-sitter-sql 0.0.2 (derekstride/tree-sitter-sql)
tree-sitter-vue-next = "0.1"          # replaces tree-sitter-vue 0.0.3 (modern Vue grammar)
# SCSS: no modern crate needed — detect_language maps .scss→"css", CSS grammar handles it

# High-performance Mutex (1.5-5x faster than std::sync::Mutex)
# Adaptive spinning avoids syscalls for uncontended locks, no poisoning
# Research: https://docs.rs/parking_lot/latest/parking_lot/
parking_lot = "0.12"

# ============================================================================
# SYSTEM MONITORING (CPU/GPU Temperature, Power, Usage)
# ============================================================================

# System Information (CPU, Memory, Disks, Network, Temperature)
# https://github.com/GuillaumeGomez/sysinfo
sysinfo = "0.38"

# NVIDIA GPU Monitoring (NVML wrapper)
# https://github.com/Cldfire/nvml-wrapper
nvml-wrapper = { version = "0.12", optional = true }

# Cross-platform system stats
# https://github.com/valpackett/systemstat
systemstat = "0.2"
tauri-plugin-fs = "2.4.5"
dirs = "6.0.0"
url = "2"
async-recursion = "1.1.1"
octocrab = "0.49.5"
libamdgpu_top = "0.11.2"

# ============================================================================
# FORGESHEETS — Spreadsheet Engine (Excel replacement, Clean Room)
# ============================================================================

# Read .xlsx/.xls/.ods/.xlsb (MIT license)
calamine = "0.26"

# Write .xlsx (MIT license)
rust_xlsxwriter = "0.79"

# CSV parsing (MIT/Unlicense dual-licensed)
csv = "1.3"

# ============================================================================
# IMPFORGE ENGINE (BSL 1.1 — Neural Trust, Brain v2.0, Cascade Router, MAPE-K)
# ============================================================================
impforge-engine = { path = "../crates/impforge-engine", optional = true }

# ============================================================================
# CODEFORGE IDE
# ============================================================================

# Real terminal PTY support (cross-platform)
portable-pty = "0.9"

# Git operations (libgit2 bindings)
git2 = "0.20"

# File system watching
notify = "8.2"
notify-debouncer-full = "0.7"

# Directory walker
walkdir = "2"

# LSP type definitions
lsp-types = "0.97"

# Cron expression parsing (for orchestrator scheduling)
# Extended syntax: L, #, W, seconds field, timezone support
# https://github.com/Hexagon/croner-rust
croner = "3"

# ============================================================================
# OPTIONAL — AI Engine Upgrades (heavy deps, compile only when needed)
# ============================================================================

# FSRS-5 spaced repetition with training support (uses Burn backend)
# Paper: "A Stochastic Shortest Path Algorithm for Optimizing Spaced Repetition Scheduling"
# https://github.com/open-spaced-repetition/fsrs-rs
fsrs = { version = "5.2", optional = true }

# Rig — Modular LLM application framework (unified provider interface)
# Supports OpenAI, Anthropic, Cohere, Ollama behind single trait
# https://rig.rs/
rig-core = { version = "0.32", optional = true }

# Burn — Next-gen tensor framework (training + inference, WGPU/CUDA/ROCm)
# CubeCL: zero-cost GPU abstractions across NVIDIA, AMD, Apple, WebGPU
# https://burn.dev/
burn = { version = "0.14", optional = true, default-features = false }

# ============================================================================
# FEATURES
# ============================================================================

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Enable NVIDIA GPU monitoring (requires NVML)
nvidia = ["nvml-wrapper"]

# Enable ImpForge AI Engine (BSL 1.1)
engine = ["dep:impforge-engine"]

# Enable all AI providers
full-ai = []

# FSRS-5 spaced repetition with Burn training
fsrs-brain = ["dep:fsrs"]

# Rig LLM framework for enhanced inference routing
rig-router = ["dep:rig-core"]

# Local inference via Candle (HuggingFace, GGUF, ONNX)
# Note: candle-core/nn/transformers are already non-optional deps;
# this feature gates the enhanced candle_engine module.
local-inference = []

# Burn tensor framework for training
burn-backend = ["dep:burn"]

# All Pro AI features
pro-ai = ["fsrs-brain", "rig-router", "local-inference", "burn-backend", "engine"]

# Build profiles moved to workspace root Cargo.toml (OOM Prevention)

[dev-dependencies]
tempfile = "3.26.0"
