[package]
name = "impforge-engine"
version = "0.6.0"
edition = "2021"
license = "BUSL-1.1"
description = "ImpForge AI Engine — Neural Trust (Three-Factor Hebbian), Brain v2.0 (FSRS-5, CLS Replay), Cascade Router, MAPE-K Self-Healing. Production-grade AI orchestration for workstation builders."
authors = ["AiImp Development"]
repository = "https://github.com/AiImpDevelopment/impforge"
homepage = "https://github.com/AiImpDevelopment/impforge"
keywords = ["ai", "neural-trust", "orchestration", "mape-k", "workstation"]
categories = ["science", "algorithms"]
readme = "README.md"
rust-version = "1.77.2"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
rusqlite = { version = "0.36", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["process", "time"] }
sysinfo = "0.38"

[dev-dependencies]
rand = "0.8"
